# setenv

./: .env.yaml  Cargo.toml  README.md
src/: main.rs
src/cmd/: mod.rs
src/cmd/env/: apply.rs  mod.rs  set.rs
src/core/: parser.rs
