[package]
name = "setenv"
version = "0.1.0"
edition = "2021"
authors = ["yanbo.ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "4.0.15", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
tokio = { version = "1.21.2", features = ["full"] }
